--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "paper-card": "PolymerElements/paper-card#^1.1.1",
     "iron-pages": "PolymerElements/iron-pages#^1.0.7",
     "paper-tabs": "PolymerElements/paper-tabs#^1.6.2",
-    "paper-input": "PolymerElements/paper-input#^1.1.14"
+    "paper-input": "PolymerElements/paper-input#^1.1.14",
+    "paper-button": "PolymerElements/paper-button#^1.0.13"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
