--- a/bower.json
+++ b/bower.json
@@ -20,11 +20,13 @@
   "dependencies": {
     "polymer": "Polymer/polymer#^1.4.0",
     "paper-card": "PolymerElements/paper-card#^1.1.1",
-    "iron-pages": "PolymerElements/iron-pages#^1.0.7",
+    "iron-pages": "^1.0.8",
     "paper-tabs": "PolymerElements/paper-tabs#^1.6.2",
     "paper-input": "PolymerElements/paper-input#^1.1.14",
     "paper-button": "PolymerElements/paper-button#^1.0.13",
-    "iron-ajax": "^1.4.3"
+    "iron-ajax": "^1.4.3",
+    "jupyter-notebook": "sbeleidy/jupyter-notebook#^0.0.2",
+    "app-layout": "^0.10.6"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
