--- a/bower.json
+++ b/bower.json
@@ -26,13 +26,16 @@
     "paper-button": "PolymerElements/paper-button#^1.0.13",
     "iron-ajax": "^1.4.3",
     "jupyter-notebook": "sbeleidy/jupyter-notebook#^0.0.3",
-    "app-layout": "^0.10.6"
+    "app-layout": "^0.10.6",
+    "json-box": "sbeleidy/json-box#^0.0.1",
+    "file-fire": "convoo/file-fire#^0.0.1",
+    "polymerfire": "^0.10.3",
+    "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.3.0"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
     "iron-demo-helpers": "PolymerElements/iron-demo-helpers#^1.0.0",
     "web-component-tester": "^4.0.0",
-    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0",
-    "json-box": "sbeleidy/json-box#^0.0.1"
+    "webcomponentsjs": "webcomponents/webcomponentsjs#^0.7.0"
   }
 }
