--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,10 @@
     "json-box": "sbeleidy/json-box#^0.0.1",
     "file-fire": "convoo/file-fire#^0.0.1",
     "polymerfire": "^0.10.3",
-    "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.3.0"
+    "paper-toggle-button": "PolymerElements/paper-toggle-button#^1.3.0",
+    "paper-item": "PolymerElements/paper-item#^1.2.1",
+    "paper-menu-button": "PolymerElements/paper-menu-button#^1.5.2",
+    "paper-menu": "PolymerElements/paper-menu#^1.2.2"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
